# portal

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Dockerrun.aws.json  Procfile  Readme.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: backend.env  docker-compose.yml
.github/workflows/: build-and-deploy.yml  build-and-publish.yml  docker-image.yml  main.yml  pytest.yml  test.yml
deployment/elasticbeanstalk/: Dockerrun.aws.json
portal/: __init__.py  asgi.py  celery.py  celeryconf.py  settings.py  urls.py  urls_public.py  urls_tenants.py  wsgi.py
portal/account/: admin.py  apps.py  models.py  notifications.py  utils.py
portal/account/migrations/: 0001_initial.py  0002_user_customer.py
portal/account/tests/: test_account.py  test_notifications.py
portal/attribute/: __init__.py  apps.py  models.py  utils.py
portal/attribute/migrations/: 0001_initial.py  0002_attributeentry_attribute_entry_types.py  0002_auto_20230316_2015.py  0003_auto_20230319_2152.py  0003_auto_20231226_1822.py  0004_alter_assigneddocumentattributevalue_unique_together_and_more.py  0004_auto_20230320_1918.py  0005_auto_20230321_1630.py  0005_remove_assignedentryattributevalue_assignment_and_more.py  0006_alter_assignedentryattributevalue_entry.py  0006_alter_attribute_options.py  0007_alter_attribute_input_type.py  0007_auto_20231227_1355.py  0008_auto_20230412_2002.py  0009_rename_reference_product_attributevalue_reference.py  0010_attribute_entity_type.py  0011_auto_20230412_2040.py  0012_alter_attribute_entity_type.py
portal/attribute/tests/: model_helper.py  test_utils.py
portal/channel/: apps.py  models.py
portal/channel/migrations/: 0001_initial.py
portal/channel/tests/: test_utils.py
portal/core/: apps.py  auth.py  auth_backend.py  exeptions.py  jwt.py  jwt_manager.py  middleware.py  models.py  notify_events.py  permissions.py  storages.py  url.py  views.py
portal/core/tests/: test_auth_backend_default_header.py  test_middleware.py
portal/core/utils/: __init__.py  editorjs.py  htmlToPDF.py  shortUUID.py
portal/customer/: admin.py  apps.py  models.py
portal/customer/migrations/: 0001_initial.py
portal/document/: __init__.py  admin.py  apps.py  events.py  models.py  notifications.py  tasks.py
portal/document/migrations/: 0001_initial.py  0002_auto_20230227_1720.py  0003_alter_documentfile_document.py  0004_alter_documentfile_file.py  0005_alter_documentfile_document.py  0006_documentfile_status.py  0007_alter_documentfile_document.py  0008_auto_20230310_1627.py  0009_document_load_type.py  0010_alter_document_load_type.py  0011_alter_document_load_type.py  0012_documentload.py  0013_alter_document_load_type.py  0014_alter_document_load_type.py  0015_alter_document_load_type.py  0016_alter_document_load_type.py  0017_alter_document_load_type.py  0018_alter_documentload_error_message.py  0019_alter_document_load_type.py  0020_alter_document_load_type.py  0021_alter_document_load_type.py  0022_remove_document_publication_date.py  0023_alter_document_load_type.py  0024_remove_invalid_expirations.py
portal/entry/: __init__.py  apps.py  models.py  tasks.py  utils.py
portal/entry/migrations/: 0001_initial.py  0002_auto_20220922_2134.py  0002_entrytype_entry_entry_type.py  0003_auto_20230203_1639.py  0003_auto_20231226_1528.py  0004_alter_entry_email.py  0004_alter_entry_type.py  0005_category_type.py  0005_remove_category_type_remove_entry_type.py  0006_consult.py  0007_remove_consult_success.py  0008_alter_consult_options.py  0009_entry_active.py  0010_auto_20230429_1744.py  0011_rename_active_entrychannellisting_is_active.py  0012_auto_20230504_1445.py  (+5 more)
portal/event/: __init__.py  apps.py  events.py  models.py  notifications.py  utils.py
portal/graphql/: context.py  decorators.py  middleware.py  middlewares.py  schema.py  views.py
portal/investment/: apps.py  models.py
portal/plugins/: __init__.py  admin.py  apps.py  base_plugin.py  email_common.py  manager.py  models.py
portal/provider/: apps.py  models.py
portal/session/: apps.py  models.py
portal/site/: context_processors.py
portal/tests/: fixtures.py  runner.py  settings.py  utils.py
portal/vehicle/: apps.py  models.py
portal/wsgi/: __init__.py  uwsgi.ini
templates/: index.html
templates/documents/: cnpj.html
templates/graphql/: playground.html
(+224 files in other folders)
