[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Felipe Faria <felipevisu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "1.26.88"
botocore = "1.29.88"
celery = "5.2.7"
dj-database-url = "0.5.0"
dj-email-url = "1.0.6"
Django = "4.2.10"
django-celery-results = "2.5.1"
django-cors-headers = "3.11.0"
django-filter = "21.1"
django-redis = "5.2.0"
django-storages = "1.13.2"
django-tenants = "3.5.0"
django-timezone-field = "5.0"
graphene = "2.1.9"
graphql-core = "2.3.2"
graphql-relay = "2.0.1"
gunicorn = "20.1.0"
html2text = "2020.1.16"
pillow = "10.2.0"
promise = "2.3"
psycopg2 = "2.9.9"
pybars3 = "0.9.7"
PyJWT = "2.4.0"
python-crontab = "2.7.1"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
python-http-client = "3.3.7"
redis = "4.5.4"
requests = "2.31.0"
s3transfer = "0.6.0"
selenium = "4.14.0"
sendgrid = "6.9.7"
sentry-sdk = "1.16.0"
singledispatch = "3.7.0"
tenant-schemas-celery = "2.2.0"
text-unidecode = "1.3"
urllib3 = "1.26.18"
vine = "5.0.0"
webdriver-manager = "4.0.1"
whitenoise = "6.4.0"

[tool.poetry.dev-dependencies]
freezegun = "1.2.2"
black = "^24.3.0"
django-graphiql-debug-toolbar = "^0.2.0"
pytest-django = "^4.8.0"
pytest = "^8.1.1"
pylint = "2.17.4"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
