[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Felipe Faria <felipevisu@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.8"
botocore = "^1.35.8"
dj-database-url = "^2.2.0"
dj-email-url = "^1.0.6"
Django = "^5.1"
django-celery-results = "2.5.1"
django-cors-headers = "^4.4.0"
django-filter = "^24.3"
django-storages = "^1.14.4"
django-tenants = "^3.6.1"
django-timezone-field = "^7.0"
graphene = "2.1.9"
graphql-core = "2.3.2"
graphql-relay = "2.0.1"
gunicorn = "^23.0.0"
html2text = "^2024.2.26"
pillow = "^10.4.0"
promise = "^2.3"
psycopg2 = "^2.9.9"
pybars3 = "0.9.7"
PyJWT = "^2.9.0"
python-crontab = "^3.2.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-http-client = "3.3.7"
redis = "^5.0.8"
requests = "^2.32.3"
s3transfer = "^0.10.2"
selenium = "^4.24.0"
sendgrid = "^6.11.0"
sentry-sdk = "^2.13.0"
singledispatch = "^4.1.0"
text-unidecode = "1.3"
urllib3 = "^2.2.2"
vine = "5.1.0"
webdriver-manager = "^4.0.2"
whitenoise = "^6.7.0"
pycurl = "^7.45.3"
django-celery-beat = "^2.7.0"
celery = "^5.4.0"
tenant-schemas-celery = "^2.2.0"
setuptools = "^74.0.0"

[tool.poetry.dev-dependencies]
freezegun = "1.5.1"
black = "^24.3.0"
django-graphiql-debug-toolbar = "^0.2.0"
pytest-django = "^4.8.0"
pytest = "^8.1.1"
pylint = "2.17.4"
django-debug-toolbar = "^4.3.0"

[tool.poetry.group.dev.dependencies]
awscli = "^1.34.8"
pytest = "^8.3.2"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
